app is fully functional, needs front-end improvements

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,14 @@
 <h1>Cocktails#index</h1>
 <p>Find me in app/views/cocktails/index.html.erb</p>
 
-<% @cocktails.each do |cocktail| %>
-<%= cocktail.name %>
-<% end %>
+<ul>
+  <% @cocktails.each do |cocktail| %>
+    <li>
+      <%= cocktail.name %>
+      <%= link_to "See details", cocktail_path(cocktail) %>
+    </li>
+  <% end %>
+</ul>
+
 
 <%= link_to "New cocktail", new_cocktail_path %>
