--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,14 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
-<%= @cocktail.name %>
+<h1><%= @cocktail.name %></h1>
+
+<h3>Ingredients</h3>
+
+<%= render "doses/index", doses: @doses %>
+
+
+<h4>Add dose</h4>
+
+<%= render "doses/new", cocktail: @cocktail, dose: @dose %>
+
+
+
+<%= link_to "Home", root_path %>
