--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <%= render "shared/nav" %>
+    <div class="container mt-2">
+      <%= yield %>
+    </div>
   </body>
 </html>
