--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,14 +1,20 @@
-<h1>Cocktails#index</h1>
+<h1>Cocktails selection</h1>
 <p>Find me in app/views/cocktails/index.html.erb</p>
 
-<ul>
+
+<div class="box">
   <% @cocktails.each do |cocktail| %>
-    <li>
-      <%= cocktail.name %>
-      <%= link_to "See details", cocktail_path(cocktail) %>
-    </li>
+    <div class="card-trip mt-3">
+      <img src="<%= cocktail.image %>" />
+      <div class="card-trip-infos">
+        <div>
+          <h2><%= cocktail.name %></h2>
+          <p><%= link_to "See details", cocktail_path(cocktail) %></p>
+        </div>
+      </div>
+    </div>
   <% end %>
-</ul>
+</div>
 
 
 <%= link_to "New cocktail", new_cocktail_path %>
