--- a/app/views/doses/_index.html.erb
+++ b/app/views/doses/_index.html.erb
@@ -3,7 +3,10 @@
     <li>
       <%= dose.description %> of
       <%= dose.ingredient.name %>
-      <%= link_to "delete this", dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } %>
+        <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure you want to delete this?" } do %>
+          <i class="fas fa-trash-alt"></i>
+        <% end %>
+      </i>
     </li>
   <% end %>
 </ul>
