improved cocktail show page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,8 @@
 // Specific CSS for your home-page
+body {
+  background-color: white;
+}
+
 .card-trip {
   overflow: hidden;
   background: white;
