--- a/app/views/doses/_new.html.erb
+++ b/app/views/doses/_new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@cocktail, @dose] do |f| %>
 <%= f.input :description %>
 <%= f.association :ingredient, input_html: { class: 'select2' } %>
-<%= f.submit %>
+<%= f.submit class: "btn btn-primary" %>
 <% end %>
