--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -28,5 +28,6 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    <%= link_to "Add cocktail", new_cocktail_path, class: "btn btn-outline-primary m-2 my-sm-0" %>
   </div>
 </nav>
