--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @cocktail do |f| %>
 <%= f.input :name %>
-<%= f.input :image %>
+<%= f.input :images, as: :file, input_html: { multiple: true } %>
 <%= f.submit %>
 <% end %>
