--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,8 @@ body {
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  width: 300px;
+  width: 17rem;
+  align-self: center;
 }
 
 .card-trip > img {
@@ -37,8 +38,11 @@ body {
 }
 
 .box {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-rows: auto;
+  grid-gap: 2rem;
   align-items: center;
-  flex-wrap: wrap;
+  padding: 2rem 2rem;
+  justify-items: center;
 }
