--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,18 @@
 <h1>Cocktails selection</h1>
 
+
 <div class="box">
-  <% @cocktails.each do |cocktail| %>
-    <div class="card-trip mt-3">
-      <% cocktail.images.each do |c| %>
-       <%= cl_image_tag c.key, crop: :fill %>
-      <% end %>
-      <div class="card-trip-infos">
-        <div>
-          <h2><%= cocktail.name %></h2>
-          <p><%= link_to "See details", cocktail_path(cocktail) %></p>
+    <% @cocktails.each do |cocktail| %>
+
+      <div class="card-trip mt-3">
+         <%= cl_image_tag cocktail.images.last.key, crop: :fill %>
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= cocktail.name %></h2>
+            <p><%= link_to "See details", cocktail_path(cocktail) %></p>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
+
+    <% end %>
 </div>
