--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,11 +1,14 @@
-.banner {
+.show {
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  background-color: #5f6872;
+}
+.show-main {
   text-align: center;
 }
 
-.banner h1 {
+.show h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -13,7 +16,7 @@
   font-weight: bold;
 }
 
-.banner p {
+.show p {
   font-size: 20px;
   color: white;
   opacity: .7;
