--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,18 +1,26 @@
-<h1>Cocktails selection</h1>
+<div class="master">
 
 
-<div class="box">
-    <% @cocktails.each do |cocktail| %>
+  <div class="top">
+    <img src="https://images.unsplash.com/photo-1559443922-3f698a0ff27a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=738&q=80" alt="" width="100%">
+    <h1 style="color: white;">Cocktails selection</h1>
+  </div>
 
-      <div class="card-trip mt-3">
-         <%= cl_image_tag cocktail.images.last.key, crop: :fill %>
-        <div class="card-trip-infos">
-          <div>
-            <h2><%= cocktail.name %></h2>
-            <p><%= link_to "See details", cocktail_path(cocktail) %></p>
+
+  <div class="box">
+      <% @cocktails.each do |cocktail| %>
+
+        <div class="card-trip mt-3">
+           <%= cl_image_tag cocktail.images.last.key, crop: :fill %>
+          <div class="card-trip-infos">
+            <div>
+              <h2><%= cocktail.name %></h2>
+              <p><%= link_to "See details", cocktail_path(cocktail) %></p>
+            </div>
           </div>
         </div>
-      </div>
 
-    <% end %>
+      <% end %>
+  </div>
+
 </div>
