navbar with fixed top, show page with rounded borders

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,8 +2,10 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
-  background-color: #5f6872;
+  background-color: #444a51;
+  border-radius: 5px;
 }
+
 .show-main {
   text-align: center;
 }
