--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,10 +6,11 @@ body {
 .card-trip {
   overflow: hidden;
   background: #3c3c49;
-  box-shadow: 0 0 15px rgba(255,255,255,0.1);
+  box-shadow: 0 0 15px rgba(255,255,255,0.2);
   width: 17rem;
   align-self: center;
   color: white;
+  border-radius: 3px;
 }
 
 .card-trip a {
