--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
-
-<%= render 'form', cocktail: @cocktail %>
+<div class="container">
+  <h1>New cocktail</h1>
+  <%= render 'form', cocktail: @cocktail %>
+</div>
