--- a/app/views/doses/_index.html.erb
+++ b/app/views/doses/_index.html.erb
@@ -1,10 +1,10 @@
-<ul>
+<ul class="ingredients_list">
   <% @doses.each do |dose| %>
-    <li>
+    <li class="ingredient-list-item">
       <%= dose.description %> of
       <%= dose.ingredient.name %>
         <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure you want to delete this?" } do %>
-          <i class="fas fa-trash-alt"></i>
+          <i class="fas fa-trash-alt text-white"></i>
         <% end %>
       </i>
     </li>
