--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body style="background-color: #09090B; color: white;">
+  <body style="background-color: #09090B;">
 
     <%= render "shared/nav" %>
     <%= yield %>
