--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #09090B;">
   <a class="navbar-brand" href="/" style="color: white;">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -28,6 +28,6 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-    <%= link_to "Add cocktail", new_cocktail_path, class: "btn btn-outline-primary m-2 my-sm-0" %>
+    <%= link_to "Add cocktail", new_cocktail_path, class: "btn btn-outline-info m-2 my-sm-0" %>
   </div>
 </nav>
