--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="color: white;">
   <h1>New cocktail</h1>
   <%= render 'form', cocktail: @cocktail %>
 </div>
