--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -24,3 +24,9 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+.new-form {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #606872;
+}
