--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,10 @@
 <div class="container" style="color: white;">
-  <h1>New cocktail</h1>
-  <%= render 'form', cocktail: @cocktail %>
+  <div class="new-form mt-5">
+    <h1>New cocktail</h1>
+    <%= simple_form_for @cocktail do |f| %>
+      <%= f.input :name %>
+      <%= f.input :images, as: :file, input_html: { multiple: true } %>
+      <%= f.submit %>
+    <% end %>
+  </div>
 </div>
