added margins to container

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container" style="color: white;">
-  <div class="new-form mt-5">
+<div class="container" style="color: white; width: 60vw;">
+  <div class="new-form mt-5 p-5">
     <h1>New cocktail</h1>
     <%= simple_form_for @cocktail do |f| %>
       <%= f.input :name %>
