--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,20 +1,18 @@
-<div class="master" style="color: white;">
-
+<div class="master mt-4" style="color: white;">
 
   <div class="top">
     <img src="https://images.unsplash.com/photo-1559443922-3f698a0ff27a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=738&q=80" alt="" width="100%">
     <h1 style="color: white;">Cocktails selection</h1>
   </div>
 
-
   <div class="box">
       <% @cocktails.each do |cocktail| %>
 
         <div class="card-trip mt-3">
           <% if cocktail.images.first %>
-          <%= cl_image_tag cocktail.images.first.key, crop: :fill %>
+            <%= cl_image_tag cocktail.images.first.key, crop: :fill %>
           <% else %>
-          <img src="https://www.amathusdrinks.com/SupplyImages/WF20003/Our%20Brands.jpg">
+            <img src="https://www.amathusdrinks.com/SupplyImages/WF20003/Our%20Brands.jpg">
           <% end %>
           <div class="card-trip-infos">
             <div>
