implemented media queries for responsiveness on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,7 +50,7 @@ body {
   grid-gap: 2rem;
   align-items: center;
   padding: 2rem 2rem;
-  justify-content: center;
+  justify-items: center;
 }
 
 .master {
@@ -62,3 +62,17 @@ body {
   text-align: center;
 }
 
+
+@media(max-width: 700px) {
+  .master {
+    grid-template-columns: 1fr;
+    margin-top: 0;
+
+  }
+
+  #master-img {
+    height: 80vh;
+    object-fit: cover;
+
+  }
+}
