--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,7 @@
 <div class="master mt-4" style="color: white;">
 
   <div class="top">
-    <img src="https://images.unsplash.com/photo-1559443922-3f698a0ff27a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=738&q=80" alt="" width="100%">
+    <img src="https://images.unsplash.com/photo-1559443922-3f698a0ff27a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=738&q=80" alt="" width="100%" id="master-img">
     <h1 style="color: white;">Cocktails selection</h1>
   </div>
 
