--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -26,11 +26,11 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-.new-form {
+/*.new-form {
   padding: 10px;
   border-radius: 5px;
   background-color: #606872;
-}
+}*/
 
 .select2 {
   width: 100% !important;
