changed nav logo

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
 
 <nav class="navbar navbar-light fixed-top justify-content-between px-3" style="background-color: #09090B;">
-  <a class="navbar-brand" href="/" style="color: white;">Home</a>
+  <a class="navbar-brand" href="/" style="color: white;"><i class="fas fa-cocktail"></i> Mr.Cocktail</a>
   <%= link_to "Add cocktail", new_cocktail_path, class: "btn btn-outline-info" %>
 </nav>
